# arbiter

./: .dockerignore  .gitignore  BACKEND_ARCHITECTURE.md  BACKEND_CONFORMANCE_TESTS.md  Cargo.toml  DESIGN.md  Dockerfile  FOLLOWUPS.md  IMPLEMENTED_SURFACE.md  KEK_ROTATION.md  NOTIFICATIONS.md  README.md  RUNNER_RESULT_PROTOCOL.md  SECRETS.md  TENANCY.md  WORKFLOWS.md  dev.sh  node_identity.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
api/: Cargo.toml
api/src/: configs.rs  extractors.rs  lib.rs  main.rs  nodes.rs  queries.rs  requests.rs  responses.rs  routes.rs  secrets.rs  sse.rs  state.rs  tenants.rs
api/src/auth/: jwt.rs  middleware.rs  mod.rs
api/src/users/: mod.rs  model.rs  routes.rs
cli/src/: main.rs
config/: Cargo.toml  arbiter.example.toml  dromio.example.toml
config/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: aead.rs  error.rs  key.rs  lib.rs  wrap.rs
docker/: docker-compose.yml
docker/init/: 000_schema.sql  00_schema.sql
node/: Cargo.toml
node/src/: main.rs
scheduler/: Cargo.toml
scheduler/src/: lib.rs
scheduler/tests/: event_driven.rs
secrets/: Cargo.toml
secrets/src/: error.rs  identity.rs  lib.rs  manager.rs
store-pg/: Cargo.toml
store-pg/.sqlx/: query-02ab20a8aed48918700b0f20972d95f65400350fe32b0ca5ac7e302179e580a7.json  query-0324ee22c0437cdfe3e00e2c103207e29d4e0fad593e3b385603c6f2117c8097.json  query-06073a896b43e82b9d51020caf46cea63c4b705539e2cf46dbbf805dbe78193a.json  query-07581431e295e1431cdf16aa9c0c640a5bae2d4d140542e1169d602a8215b341.json  query-08288029f1be6137feaef5db521c8f5916e06315d2872b82e6e4939870f2914c.json  query-09216d00660b48775adb32f43c9f3953f18a3a09ab5c2b66bdf352837e2d4be6.json  query-09a39838dd2b29cb5d737bfaa4e2d1122d3cd45ee223aa6a9ce0aae34b0b6420.json  query-0bd087f9b39365aaaba712aa1c1d9f52e2072c45c42b6b86658a93a0913cdd66.json  query-0da91aa8a83eb6bed4de8f532e0fccb32fd354b2e18dcab761210d8310cca8ba.json  query-0e154a0ba45d064d8d1e6f7470eda67aa7b8c6517e0da47c33934a215e560b73.json  query-10c0b154b52a3f0f94fb957df5d6a14a55ea0733977fac4f55dec0f10b9b8c24.json  query-116c1c1cb2075bb4f4744c19001efdda6e89d8f00af7631bb1c888b3f6ea4826.json  query-13608700c31a3b7f129391259b471a7fc820c5035a1af8da7cfd8e4e3283554d.json  query-1704e5771b209989a248e126621fd110d6c85694f429a1cdedb06f4923440b2f.json  query-17b24b7e2a70c204d73ca6243367266b3cf7d99ade172c06342be6e360df753e.json  query-1958089f787017982b3e506c77d5f0fd63af83176333bcb87163e57a6b49c210.json  (+105 more)
store-pg/src/: lib.rs
store-sqlite/: Cargo.toml  schema.sql
store-sqlite/.sqlx/: query-055e6d37f1ef2be077878b1aeeabff9856b6f7e3472625a242fff5409c1f336c.json  query-067a1002ed1a94e4f8316acfb7241a27ac28ad1f907b442585277f60dcaac071.json  query-06f0aa348ec58ce931bea834b2d8fa05ac7551b3c57e67fb5ebd3a5c4769ac3a.json  query-093540c658d0787c3299c351c1839dda67d7aa205f2569078bd227a562d786a0.json  query-0b45353e1d4a55b2852aacfa4d3fe2b88f1c9dd07d64e9bb050ecc22818e42ca.json  query-0ddc905b53282c97c6d13acd2d898525f89e0a3860804415cad45be8bb2027c6.json  query-10e3a3ad5247219dc6b47094f31614c92b896c12a3f0ba89fc1456e9f57c7b35.json  query-1197a1b877f7afb0f2c228198728bb588c1d6f8f5d9bba146d0f8c45c648e98d.json  query-1256b4044558fe664a4679c70754b71ef98885dc669faf1357373ebe02e31754.json  query-128e02d828ae699d933f4978207c3b73fb50f5929f2f3ad2a3fbc2d47d2dd6de.json  query-1364f8a5a5ac811f7f8d915083fc157667a8c5e4a23cc17d8f0b853de8e6f833.json  query-13a3c7224784a5fa8ae6c86e3b54a5f9c94b223b971f31823d27a12803509c20.json  query-15b98b1350f1d70e9ea06903004506a3ac89e57b32f737edb61f01d3269e1106.json  query-15fd30bdb2d60e68bbc9ab106f1dac6cd1ad9a78b6e81caa6c95fc4f562a9073.json  query-18258bfd0f6810b5795420e5e75e4de5d4f67f8ebc11b670cc93dff94871303c.json  query-1983266768559c8194bfdc31be764b53d8c45f5b7b4ec6aa73c695a3d155ae24.json  query-1ce90670eacf5198b58144bbc5d083df246eb74a942fc4b02126362991413101.json  query-1e6d2413144100b397073c56543101cd637b022edd62405f01802d90031293f8.json  query-2025ad9d7daf4ecd875ffa68e5db37350911e5ad86a3339e42254475a2fd5d26.json  query-205a2bf0147d6b36d18d8943aedbb872be86401626fcb36dcbd8c91fe09a1eb7.json  query-22a85b16527068ecd53e065907b321ea61b291e862595a658c70c1e754b6fc37.json  query-29c366b9e25cb961e52e26d5fa40a0b94d69d8465a2180d0c80bec8a89792f39.json  query-2abaa80311bd41f112ee836e34c8e300170ac1fcda2b5bbd90f61ce9dcacccde.json  query-2f84ba1b15249fbef6e7e95db9cc4a1511f5827da6f89973a785894c239bac12.json  query-2f874fd59ef300362fa3a3b02fd3b98611768ff95c22b341633f73e8ed421000.json  query-31c3916a990130390c55d855a8f99757a261b936aa677af4920cb7376f3e5544.json  query-327b56e9ea6c89e6149002f496f034e88fb8117562df57f331adc7e5f39edde6.json  query-38a3174da346cf139c355098644d5d6a0644e0865a9e9ab1327788201fd81ea8.json  query-38c49406cd640d861a3558132fc870b3637dd98114ae130cebd3832a8e22206c.json  query-3a217cfd80f0b3bfeb44ae31139fe36c71e462139ea7ffda9e16bd1940a637cc.json  query-3c3502d0f6aa2de213b297245833f16f4fddcdeb443198806ec891fa7bb6b693.json  query-3d868c8f0942e2036ee65b6208db7fb14e93b264f49343eaf80260319b2a25c0.json  query-3f0f74858ee8b9fc503313cbf79c6fc878a151cb926a3f51e3d7a6833bd2ae2d.json  query-410f2c4424baf60268b9f67f72290a469961ca540e268eb8f3e32ba5c4683cb2.json  query-41b14b4dd6695407e115d1a7dd73c40db73ce8a368e738ab9a1b93b981d96423.json  query-425ca963bcab4e30c69815af508cfddf07a8d49f22ee191f7a0f59487aff6d3f.json  query-43967e2a31c9931ee67bd7eb3415b77c896a7d35853e64df5ab1c2c0f96f55f4.json  query-43cd6ba66f21810a789cca3bbd4a3870c41fe9097a131db13d7bab0afd3ccc11.json  query-43de20d3417caadf4a857a7cb4b8e425818d01ccf900f020170f5c9bb650202d.json  query-443975489c369660d64475a1b30e8de26e430d62151f59bfdce44b3029f7bde7.json  (+68 more)
store-sqlite/src/: lib.rs
store-tests/: Cargo.toml
store-tests/src/: lib.rs
store-tests/tests/: conformance.rs
ui_dist/: index.html
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-ui/src/: App.tsx  main.tsx  (+2 more)
worker/: Cargo.toml
worker/runtimes/: arbiter_runtime.js  arbiter_runtime.py
worker/src/: lib.rs
worker/tests/: full_flow.rs  worker_loop.rs
(+191 files in other folders)
