[package]
name = "dromio-api"
version = "0.1.0"
edition = "2024"

[dependencies]
dromio-config = { path = "../config" }
dromio-core = { path = "../core" }
dromio-store-pg = { path = "../store-pg" }
anyhow = "1.0"
argon2 = { version = "0.5", features = ["rand"] }
axum = { version = "0.8", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
croner = "3.0"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
password-hash = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["compression-br", "cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ts-rs = "11.1"
uuid = { version = "1", features = ["v4"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"] }
utoipa-redoc = "6.0"
