[package]
name = "dromio-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ts-rs = { version = "11.1", features = ["chrono-impl", "uuid-impl"] }
uuid = { version =  "1", features = ["serde", "v4"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }