[package]
name = "arbiter-node"
version = "0.1.0"
edition = "2024"

[dependencies]
arbiter-config = { path = "../config" }
arbiter-core = { path = "../core" }
arbiter-scheduler = { path = "../scheduler" }
arbiter-store-pg = { path = "../store-pg" }
arbiter-worker = { path = "../worker" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
fd-lock = "4.0"
futures = "0.3"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"
uuid-readable-rs = "0.1"