[package]
name = "dromio-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
dromio-core = { path = "../core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
croner = "3.0"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"
