[package]
name = "arbiter-secrets"
version = "0.1.0"
edition = "2024"

# Secrets management layer on top of arbiter-crypto (see SECRETS.md). Step 2 adds the
# node identity: a versioned keyring and a pluggable store for it.

[dependencies]
arbiter-core = { path = "../core" }
arbiter-crypto = { path = "../crypto" }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
arbiter-store-sqlite = { path = "../store-sqlite" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
