[package]
name = "arbiter-store-sqlite"
version = "0.1.0"
edition = "2024"

# Embedded single-node backend. Uses sqlx's runtime query API (not the compile-time
# `query!` macros), so it needs no DATABASE_URL to build.

[dependencies]
arbiter-core = { path = "../core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
