[package]
name = "arbiter-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
arbiter-core = { path = "../core" }
arbiter-scheduler = { path = "../scheduler" }
arbiter-store-pg = { path = "../store-pg" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
shell-words = "1.1"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"