[package]
name = "arbiter-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
arbiter-core = { path = "../core" }
arbiter-scheduler = { path = "../scheduler" }
arbiter-store-pg = { path = "../store-pg" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hostname = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql"] }

[dev-dependencies]
arbiter-store-sqlite = { path = "../store-sqlite" }
arbiter-secrets = { path = "../secrets" }
wiremock = "0.6"